margins and fonts touchup

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="banner">
       <div class="banner-text-container">
         <p class="collection">NEW COLLECTION</p>
-        <p class="season">Spring/Summer 2019</p>
+        <p class="season">Spring/Summer <br>2019</br></p>
       </div>
     </section>
 
@@ -93,15 +93,15 @@
         <div><p>© Aloha Apparel Co.</p>
         <p>Powered by HTML and CSS.</p>
         <p>604-604-6040. info@alohaapparel.com</p>
-        <p>Vancouver, BC, Canada</p>
+        <p>1490 West Broadway</p><p></p>Vancouver, BC, Canada</p>
         </div>
 
-        <div class="container">  
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-pinterest"></i>
-            <i class="fab fa-google-plus-g"></i>
+        <div class="footer-container">  
+            <i class="fab fa-facebook"><p>Facebook</p></i>
+            <i class="fab fa-twitter"><p>Twitter</p></i>
+            <i class="fab fa-instagram"><p>Instagram</p></i>
+            <i class="fab fa-pinterest"><p>Pinterest</p></i>
+            <i class="fab fa-google-plus-g"><p>Google+</p></i>
         </div>
     </footer>
     
