media queery for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 
     <footer class="site-footer">
         <div><p>© Aloha Apparel Co.</p>
-        <p>Powered by HTML and CSS.</p>
+        <br>Powered by HTML and CSS.</br>
         <p>604-604-6040. info@alohaapparel.com</p>
-        <p>1490 West Broadway</p><p></p>Vancouver, BC, Canada</p>
-        </div>
+        <span><br>1490 West Broadway</br><p>Vancouver, BC, Canada</p>
+        </div></span>
 
         <div class="footer-container">  
             <i class="fab fa-facebook"><p>Facebook</p></i>
